# sort_gui

./: README.md  pyproject.toml
sort_gui/: entry.py
sort_gui/gui/: application.py  widgets.py
tests/: test_ui.py
ui/: entry.py
ui/gui/: action.py  application.py  widgets.py
